fix: center align no data message

--- a/src/renderer/views/MainRouteRenderer.scss
+++ b/src/renderer/views/MainRouteRenderer.scss
@@ -163,8 +163,7 @@
         .main-content {
             text-align: center;
             justify-self: center;
-            align-self: start;
-            margin-block-start: 10vh;
+            align-self: center;
 
             p {
                 margin-block: 20px;
